2004-10-10: Karl Trygve Kalleberg <karltk@gentoo.org>
	* Fixed is_overlay() to report properly, #53432.

2004-09-27: Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added find_installed_packages

2004-09-08: Karl Trygve Kalleberg <karltk@gentoo.org>
	* Reworked printing functions

2004-08-29: Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added printing functions

2004-08-22: Karl Trygve Kalleberg <karltk@gentoo.org>
	* Fixed Package.get_env_var to use the correct tree db.
	* Renamed Package.get_use_vars to Package.get_use_flags
